--- a/lesson_3_alexnet.ipynb
+++ b/lesson_3_alexnet.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "import keras\n",
+    "from tensorflow     import keras\n",
     "from keras.datasets import mnist\n",
     "from keras.layers   import Dense, Dropout, Flatten\n",
     "from keras.layers   import Input, Conv2D, MaxPooling2D\n",
@@ -167,9 +167,9 @@
     "\n",
     "conv3 = Conv2D(filters=384, kernel_size=(3,3), activation='relu')(max2)\n",
     "\n",
-    "conv4 = Conv2D(name='anil', filters=384, kernel_size=(3,3), activation='relu', padding='same')(conv3)\n",
+    "conv4 = Conv2D(name='ernie', filters=384, kernel_size=(3,3), activation='relu', padding='same')(conv3)\n",
     "\n",
-    "conv5 = Conv2D(name='kyle', filters=256, kernel_size=(3,3), activation='relu')(conv4)\n",
+    "conv5 = Conv2D(name='cookie', filters=256, kernel_size=(3,3), activation='relu')(conv4)\n",
     "\n",
     "layer6 = Flatten()(conv5)\n",
     "\n",
@@ -179,7 +179,7 @@
     "\n",
     "layer9 = Dense(4096, activation='relu')(layer8)\n",
     "\n",
-    "layer10 = Dense(num_classes, activation='softmax', name='suman')(layer9)\n",
+    "layer10 = Dense(num_classes, activation='softmax', name='bert')(layer9)\n",
     "\n",
     "model = Model(inputs=[inputs], outputs=[layer10])"
    ]
