Added colab. Update to tf 2

--- a/lesson2_brats/Brain_tumor_example.ipynb
+++ b/lesson2_brats/Brain_tumor_example.ipynb
@@ -41,7 +41,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting nibabel\n",
+      "  Using cached nibabel-3.2.1-py3-none-any.whl (3.3 MB)\n",
+      "Requirement already satisfied: packaging>=14.3 in /home/reina/anaconda3/envs/tf2/lib/python3.8/site-packages (from nibabel) (20.9)\n",
+      "Requirement already satisfied: numpy>=1.14 in /home/reina/anaconda3/envs/tf2/lib/python3.8/site-packages (from nibabel) (1.20.2)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /home/reina/anaconda3/envs/tf2/lib/python3.8/site-packages (from packaging>=14.3->nibabel) (2.4.7)\n",
+      "Installing collected packages: nibabel\n",
+      "Successfully installed nibabel-3.2.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install nibabel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +753,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"my_awesome_cnn_model.hdf5\")"
+    "model.save(\"my_awesome_cnn_brats_model\")"
    ]
   },
   {
@@ -757,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
