Update to smaller VGG model for Colab

--- a/lesson_4_VGG.ipynb
+++ b/lesson_4_VGG.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,29 +108,16 @@
     "x_train = x_train.astype('float32')\n",
     "x_test = x_test.astype('float32')\n",
     "\n",
-    "# Scale images between -1 and 1 with mean of 0\n",
-    "x_train_norm = x_train - x_train.mean()\n",
-    "x_test_norm  = x_test  - x_test.mean()\n",
-    "\n",
-    "x_train_norm /= x_train_norm.max()  \n",
-    "x_test_norm  /= x_test_norm.max()    "
+    "# Scale images between 0 and 1\n",
+    "x_train_norm = x_train / 255.\n",
+    "x_test_norm  = x_test  / 255."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_train shape: (50000, 32, 32, 3)\n",
-      "50000 train samples\n",
-      "10000 test samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('x_train shape:', x_train.shape)\n",
     "print(x_train.shape[0], 'train samples')\n",
@@ -148,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,11 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = Input(input_shape, name='Images')\n",
+    "inputs = Input(input_shape, name='input_images')\n",
     "\n",
     "# Block 1\n",
     "conv1 = Conv2D(filters=64, kernel_size=(3,3), activation='relu', padding='same')(inputs)\n",
@@ -183,30 +170,30 @@
     "max2 = MaxPooling2D(pool_size=(2,2))(conv2)\n",
     "\n",
     "# Block 2\n",
-    "conv3 = Conv2D(filters=128, kernel_size=(3,3), activation='relu', padding='same')(max2)\n",
-    "conv4 = Conv2D(filters=128, kernel_size=(3,3), activation='relu', padding='same')(conv3)\n",
+    "conv3 = Conv2D(filters=96, kernel_size=(3,3), activation='relu', padding='same')(max2)\n",
+    "conv4 = Conv2D(filters=96, kernel_size=(3,3), activation='relu', padding='same')(conv3)\n",
     "\n",
     "max3 = MaxPooling2D(pool_size=(2,2))(conv4)\n",
     "\n",
     "# Block 3\n",
-    "conv5 = Conv2D(filters=256, kernel_size=(3,3), activation='relu', padding='same')(max3)\n",
-    "conv6 = Conv2D(filters=256, kernel_size=(3,3), activation='relu', padding='same')(conv5)\n",
-    "conv7 = Conv2D(filters=256, kernel_size=(1,1), activation='relu', padding='same')(conv6)\n",
+    "conv5 = Conv2D(filters=192, kernel_size=(3,3), activation='relu', padding='same')(max3)\n",
+    "conv6 = Conv2D(filters=192, kernel_size=(3,3), activation='relu', padding='same')(conv5)\n",
+    "conv7 = Conv2D(filters=192, kernel_size=(1,1), activation='relu', padding='same')(conv6)\n",
     "\n",
     "max4 = MaxPooling2D(pool_size=(2,2))(conv7)\n",
     "\n",
     "# Block 4\n",
-    "conv8 = Conv2D(filters=512, kernel_size=(3,3), activation='relu', padding='same')(max4)\n",
-    "conv9 = Conv2D(filters=512, kernel_size=(3,3), activation='relu', padding='same')(conv8)\n",
-    "conv10 = Conv2D(filters=512, kernel_size=(1,1), activation='relu', padding='same')(conv9)\n",
+    "conv8 = Conv2D(filters=224, kernel_size=(3,3), activation='relu', padding='same')(max4)\n",
+    "conv9 = Conv2D(filters=224, kernel_size=(3,3), activation='relu', padding='same')(conv8)\n",
+    "conv10 = Conv2D(filters=224, kernel_size=(1,1), activation='relu', padding='same')(conv9)\n",
     "\n",
     "layer11 = Flatten()(conv10)\n",
     "\n",
-    "layer12 = Dense(4096, activation='relu')(layer11)\n",
+    "layer12 = Dense(1024, activation='relu')(layer11)\n",
     "\n",
     "layer13 = Dropout(0.5)(layer12)\n",
     "\n",
-    "layer14 = Dense(4096, activation='relu')(layer13)\n",
+    "layer14 = Dense(1024, activation='relu')(layer13)\n",
     "\n",
     "layer15 = Dense(num_classes, activation='softmax')(layer14)\n",
     "\n",
@@ -228,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,73 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model.compile(loss=keras.losses.categorical_crossentropy,\n",
-    "              optimizer=keras.optimizers.Adam(),\n",
-    "              metrics=['accuracy', keras.metrics.AUC()])"
+    "              optimizer=keras.optimizers.Adam(learning_rate=1e-5),\n",
+    "              metrics=['accuracy', keras.metrics.AUC(), keras.metrics.Precision(), keras.metrics.Recall()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "Images (InputLayer)          [(None, 32, 32, 3)]       0         \n",
-      "_________________________________________________________________\n",
-      "conv2d (Conv2D)              (None, 32, 32, 64)        1792      \n",
-      "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 32, 32, 64)        36928     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 16, 16, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 16, 16, 128)       73856     \n",
-      "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 16, 16, 128)       147584    \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 8, 8, 128)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 8, 8, 256)         295168    \n",
-      "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 8, 8, 256)         590080    \n",
-      "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 8, 8, 256)         65792     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 4, 4, 256)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_7 (Conv2D)            (None, 4, 4, 512)         1180160   \n",
-      "_________________________________________________________________\n",
-      "conv2d_8 (Conv2D)            (None, 4, 4, 512)         2359808   \n",
-      "_________________________________________________________________\n",
-      "conv2d_9 (Conv2D)            (None, 4, 4, 512)         262656    \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 8192)              0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 4096)              33558528  \n",
-      "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 4096)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 4096)              16781312  \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                40970     \n",
-      "=================================================================\n",
-      "Total params: 55,394,634\n",
-      "Trainable params: 55,394,634\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
@@ -322,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,36 +269,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-961696178b52370c\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-961696178b52370c\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext tensorboard\n",
     "%tensorboard --logdir logs"
@@ -374,34 +281,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/8\n",
-      "390/390 [==============================] - 64s 122ms/step - loss: 2.3038 - accuracy: 0.0973 - auc: 0.4970 - val_loss: 2.3026 - val_accuracy: 0.1000 - val_auc: 0.5000\n",
-      "Epoch 2/8\n",
-      "390/390 [==============================] - 19s 50ms/step - loss: 2.3027 - accuracy: 0.0973 - auc: 0.4981 - val_loss: 2.3026 - val_accuracy: 0.1000 - val_auc: 0.5000\n",
-      "Epoch 3/8\n",
-      "390/390 [==============================] - 19s 49ms/step - loss: 2.3026 - accuracy: 0.0998 - auc: 0.4991 - val_loss: 2.3026 - val_accuracy: 0.1000 - val_auc: 0.5000\n",
-      "Epoch 4/8\n",
-      "390/390 [==============================] - 19s 49ms/step - loss: 2.3027 - accuracy: 0.0997 - auc: 0.4989 - val_loss: 2.3026 - val_accuracy: 0.1000 - val_auc: 0.5000\n",
-      "Epoch 5/8\n",
-      "390/390 [==============================] - 19s 50ms/step - loss: 2.3027 - accuracy: 0.0974 - auc: 0.4966 - val_loss: 2.3026 - val_accuracy: 0.1000 - val_auc: 0.5000\n",
-      "Epoch 6/8\n",
-      "390/390 [==============================] - 19s 50ms/step - loss: 2.3027 - accuracy: 0.0981 - auc: 0.4984 - val_loss: 2.3026 - val_accuracy: 0.1000 - val_auc: 0.5000\n",
-      "Epoch 7/8\n",
-      "390/390 [==============================] - 19s 50ms/step - loss: 2.3026 - accuracy: 0.1017 - auc: 0.4995 - val_loss: 2.3026 - val_accuracy: 0.1000 - val_auc: 0.5000\n",
-      "Epoch 8/8\n",
-      "189/390 [=============>................] - ETA: 8s - loss: 2.3027 - accuracy: 0.0973 - auc: 0.4961"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fits the model on batches with real-time data augmentation:\n",
     "history = model.fit(datagen.flow(x_train_norm, y_train, batch_size=batch_size),\n",
-    "                    steps_per_epoch=len(x_train_norm) / batch_size, epochs=epochs, \n",
+    "                    epochs=epochs, \n",
     "                    validation_data=(x_test_norm, y_test), callbacks=[tb_log])"
    ]
   },
@@ -413,7 +297,10 @@
    "source": [
     "score = model.evaluate(x_test_norm, y_test, verbose=1)\n",
     "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])"
+    "print('Test accuracy:', score[1])\n",
+    "print('Test AUC:', score[2])\n",
+    "print('Test Precision:', score[3])\n",
+    "print('Test Recall:', score[4])"
    ]
   },
   {
@@ -518,7 +405,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save(\"my_vgg_model\")\n",
+    "!ls my_vgg_model"
+   ]
   }
  ],
  "metadata": {
