Update to smaller VGG model for Colab

--- a/lesson_4_VGG.ipynb
+++ b/lesson_4_VGG.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size  = 128\n",
     "num_classes = 10\n",
-    "epochs      = 8"
+    "epochs      = 14"
    ]
   },
   {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,25 +99,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = cifar10.load_data()\n",
     "\n",
-    "x_train = x_train.astype('float32')\n",
-    "x_test = x_test.astype('float32')\n",
-    "\n",
     "# Scale images between 0 and 1\n",
-    "x_train_norm = x_train / 255.\n",
-    "x_test_norm  = x_test  / 255."
+    "x_train_norm = x_train / x_train.max()\n",
+    "x_test_norm  = x_test  / x_train.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train shape: (50000, 32, 32, 3)\n",
+      "50000 train samples\n",
+      "10000 test samples\n"
+     ]
+    }
+   ],
    "source": [
     "print('x_train shape:', x_train.shape)\n",
     "print(x_train.shape[0], 'train samples')\n",
@@ -135,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +245,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_images (InputLayer)    [(None, 32, 32, 3)]       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d (Conv2D)              (None, 32, 32, 64)        1792      \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 32, 32, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 16, 16, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 16, 16, 96)        55392     \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 16, 16, 96)        83040     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 8, 8, 96)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 8, 8, 192)         166080    \n",
+      "_________________________________________________________________\n",
+      "conv2d_5 (Conv2D)            (None, 8, 8, 192)         331968    \n",
+      "_________________________________________________________________\n",
+      "conv2d_6 (Conv2D)            (None, 8, 8, 192)         37056     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 4, 4, 192)         0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_7 (Conv2D)            (None, 4, 4, 224)         387296    \n",
+      "_________________________________________________________________\n",
+      "conv2d_8 (Conv2D)            (None, 4, 4, 224)         451808    \n",
+      "_________________________________________________________________\n",
+      "conv2d_9 (Conv2D)            (None, 4, 4, 224)         50400     \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 3584)              0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 1024)              3671040   \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1024)              1049600   \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 10)                10250     \n",
+      "=================================================================\n",
+      "Total params: 6,332,650\n",
+      "Trainable params: 6,332,650\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -256,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,9 +329,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 4645), started 0:31:46 ago. (Use '!kill 4645' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-d75ebc4dc4c3a0a\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-d75ebc4dc4c3a0a\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_ext tensorboard\n",
     "%tensorboard --logdir logs"
@@ -281,7 +377,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/14\n",
+      " 84/391 [=====>........................] - ETA: 13s - loss: 2.3022 - accuracy: 0.1047 - auc: 0.5109 - precision: 0.0000e+00 - recall: 0.0000e+00"
+     ]
+    }
+   ],
    "source": [
     "# fits the model on batches with real-time data augmentation:\n",
     "history = model.fit(datagen.flow(x_train_norm, y_train, batch_size=batch_size),\n",
