--- a/bounding_box_detectors.ipynb
+++ b/bounding_box_detectors.ipynb
@@ -12,6 +12,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "016cb920",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tonyreina/keras_tutorials/blob/master/bounding_box_detectors.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ed4f3cd",
    "metadata": {},
    "source": [
