--- a/bounding_box_detectors.ipynb
+++ b/bounding_box_detectors.ipynb
@@ -39,6 +39,8 @@
     "import cv2  # OpenCV\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from typing import List\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -101,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff35be981f0>"
+       "<matplotlib.image.AxesImage at 0x7f7f2f0e3d00>"
       ]
      },
      "execution_count": 4,
@@ -146,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff35bc200a0>"
+       "<matplotlib.image.AxesImage at 0x7f7f2ee68f10>"
       ]
      },
      "execution_count": 5,
@@ -190,7 +192,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff35bb83d00>"
+       "<matplotlib.image.AxesImage at 0x7f7f2ee55cd0>"
       ]
      },
      "execution_count": 6,
@@ -235,7 +237,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff35bb6f580>"
+       "<matplotlib.image.AxesImage at 0x7f7f2edc51f0>"
       ]
      },
      "execution_count": 7,
@@ -421,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def random_shapes(shapes:list[str]) -> np.ndarray:\n",
+    "def random_shapes(shapes:List[str]) -> np.ndarray:\n",
     "    \"\"\"Create an image with random_shapes\n",
     "    \n",
     "    Args:\n",
